--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ body {
   font-weight: bold;
 }
 
-.skicon{
+.skicon {
     width:75px;
     height:75px;
 }
@@ -75,7 +75,7 @@ body {
   z-index: 2;
 }
 
-.how-it-works.row .col-2{
+.how-it-works.row .col-2 {
   align-self: stretch;
 }
 
@@ -148,7 +148,7 @@ body {
   border-color: #45a29e;
 } 
 
-.intro{
+.intro {
   font-family: 'Abril Fatface', cursive;
   color: white;
   text-align: center;
@@ -156,32 +156,15 @@ body {
 }
 
 
-#interestCard1 .img-fluid{
+#interestCard1, #interestCard2 , #interestCard3, #interestCard4 {
   width: auto;
-  max-width: 300px;
-  height: 8em;
+  height: 7em;
+  width: 10em;
+  padding: 0%;
+  margin: 1em;
 }
 
-
-#interestCard2 .img-fluid{
-  width: auto;
-  max-width: 300px;
-  height: 8em;
-}
-
-#interestCard3 .img-fluid{
-  width: auto;
-  max-width: 300px;
-  height: 8em;
-}
-
-#interestCard4 .img-fluid{
-  width: auto;
-  max-width: 300px;
-  height: 8em;
-}
-
-.center{
+.center {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.2em;  
   padding-left: 10%;
@@ -195,7 +178,10 @@ body {
   padding-left: 10%;
 }
 
-.heading { text-align: center; }
+.heading {
+   text-align: center;
+   margin: 1em 0em; 
+  }
 
 .heading span{  
   font-family: 'Abril Fatface', cursive;
@@ -268,8 +254,9 @@ body {
   margin:1rem;
 }
 
-.card{
+.card {
   border: none;
+  padding: 0%;
 }
 
 .card-deck {
@@ -280,8 +267,12 @@ body {
   font-size: 3vw;  
 }
 
-#d1,#d3 {
+#d1,#d3{
   color: black;
+}
+
+#d2 > hr {
+  color: #000; 
 }
 
 .skills { 
@@ -355,6 +346,18 @@ body {
   width: 100%;   
 }
 
+.aboutMe {
+  border-radius: 2em;  
+  border: 0.2em solid #45a29e; 
+  background-color: rgb(0, 0, 0, 0.8);
+  overflow: hidden;
+  position: relative; 
+  height: 20em;
+  width: 80%;  
+  left: 5%;
+  padding-left: 15%; 
+}
+
 #stl {
   width: 100px;
   position: fixed;
@@ -405,6 +408,7 @@ body {
   z-index: 10;
   border: #45a29e;
   }
+
 #stl ul {
   display: flex;
   justify-content: center;
@@ -479,4 +483,55 @@ body {
 
 #CV:hover {
   color: #45a29e;
+}
+
+#introDesc img {
+    width: 75%;
+    height: 8em; 
+}
+
+#introDesc {
+  margin: 10%;
+  padding: 10%;
+  padding-left: 0%;
+}
+
+.card .text {
+  position: absolute;
+  visibility: hidden;
+  width: 100%;
+  display:none;  
+  transition: all 1s ease-in-out;
+}
+.card:hover .text {
+  text-align: center;
+  padding: 1em;
+  font-size: 1em;
+  opacity: 1;
+  visibility: visible;
+  display:block;
+  z-index:2;
+  -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+.card:hover img {
+  opacity: 0;
+}
+
+.button {
+  border: 2px solid #45a29e;
+  margin-top: 20%;
+  text-decoration: none;
+  font-size: 1em;
+  display: block;
+  color: black;
+  text-decoration: none;
+}
+
+.button:link {
+  color: black;
+  text-decoration: none;
 }
